--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "ts-json-checker",
+  "name": "ts-data-checker",
   "version": "1.0.0",
-  "description": "Type checks JSON at runtime.",
+  "description": "Type checks JSON data at runtime.",
   "main": "index.js",
   "scripts": {
-    "test": "ts-node tests/basic.ts"
+    "test": "ts-node tests"
   },
   "author": "",
   "license": "MIT",
