--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "ts-data-checker",
   "version": "1.0.0",
   "description": "Type checks JSON data at runtime.",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/markusjohnsson/ts-data-checker"
+  },
   "main": "lib/main.js",
   "scripts": {
     "test": "ts-node ./tests"
