Actually include dependency of ts-data-checker in examples

--- a/examples/safeParse/package.json
+++ b/examples/safeParse/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/geojson": "^7946.0.8"
+    "@types/geojson": "^7946.0.8",
+    "ts-data-checker": "^1.1.0"
   }
 }
