--- a/examples/express/package.json
+++ b/examples/express/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^16.4.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "ts-data-checker": "^1.1.0"
   }
 }
